# rechu

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-analysis.txt  requirements-docs.txt  requirements-release.txt  requirements-test.txt  requirements.txt  settings.toml.example  settings.toml.test  sonar-project.properties
.github/workflows/: coverage.yml  docs.yml
docs/source/: commands.md  conf.py  configuration.md  files.md  index.md  installation.md  schemas.rst
rechu/: __init__.py  __main__.py  alembic.ini  database.py  matcher.py  settings.py  settings.toml
rechu/alembic/: env.py  script.py.mako
rechu/command/: __init__.py  alembic.py  base.py  config.py  create.py  delete.py  dump.py  match.py  new.py  read.py
rechu/inventory/: __init__.py  base.py  products.py  shops.py
rechu/io/: __init__.py  base.py  products.py  receipt.py  shops.py
rechu/matcher/: base.py  product.py
rechu/models/: base.py  product.py  receipt.py  shop.py
rechu/types/: decorator.py  quantized.py
samples/: products-id.yml  products.yml  receipt.yml  receipt_edit_input  receipt_input  shops.yml
samples/invalid-products/: product-other.yml  product-shop.yml  products-number.yml  products.yml
schema/: products.json  pyproject.json  receipt.json  settings.json  shops.json
scripts/: __init__.py  ah.sh  format_basedpyright_report.py  format_json_schema_report.py  report_products.sh  validate_schema.sh
scripts/spec/: __init__.py  (+3 more)
tests/: __init__.py  alembic.ini  database.py  matcher.py  settings.prefix.toml  settings.py  settings.toml
(+77 files in other folders)
